--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,6 @@
 
   <body>
     <div id="app">Loading...</div>
-    <script src="main.js" />
+    <script src="main.js"></script>
   </body>
 </html>
